update sublime gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,6 @@ www/graphics/*/index.html
 data/*.xls
 data/*.xlsx
 www/graphics/*/child.html
-dailygraphics.sublime-*
+daily-graphics.sublime-*
 graphic_templates/**/*.xlsx
 graphic_templates/_basec
